--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fuzzy-matcher = "0.3.7"
+clap = { version = "4.4.11", features = ["derive"] }
+indicatif = "0.17.7"
+nucleo = "0.2.1"
