--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 clap = { version = "4.4.11", features = ["derive"] }
 indicatif = "0.17.7"
 nucleo = "0.3.0"
+walkdir = "2.4.0"
 # nucleo = { version = "0.3.0", features = ["*"] }
 # nucleo-matcher = "0.2.0"
