--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ indicatif = "0.17.7"
 nucleo = "0.3.0"
 walkdir = "2.4.0"
 # nucleo = { version = "0.3.0", features = ["*"] }
-# nucleo-matcher = "0.2.0"
+nucleo-matcher = "0.3.0"
